added the functionality to create a new opportunity and made minor fiexes

--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <!-- navbar -->
-    {% include "navbar.html" %}
+    {% include "partials/navbar.html" %}
 
     <main class="flex flex-col flex-grow self-center mt-12 mb-16 px-6 w-full max-w-5xl">
         <!-- Page Header -->
@@ -26,9 +26,9 @@
 
                 <!-- image placeholder -->
                 <img
-                    class="w-full md:w-56 h-40 object-cover rounded-lg shadow"
-                    src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d"
-                    alt="students working"
+                        class="w-full md:w-56 h-40 object-cover rounded-lg shadow"
+                        src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d"
+                        alt="students working"
                 />
             </div>
         </section>
@@ -38,9 +38,9 @@
             <div class="flex flex-col md:flex-row gap-5">
                 <!-- image placeholder -->
                 <img
-                    class="w-full md:w-56 h-40 object-cover rounded-lg shadow"
-                    src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b"
-                    alt="mission image"
+                        class="w-full md:w-56 h-40 object-cover rounded-lg shadow"
+                        src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b"
+                        alt="mission image"
                 />
 
                 <div class="flex-1">
@@ -97,9 +97,9 @@
             <div class="grid md:grid-cols-2 gap-4 mt-4">
                 <div class="bg-gray-50 border border-gray-200 rounded-lg p-4 flex flex-col gap-3">
                     <img
-                        class="h-28 w-full object-cover rounded-md"
-                        src="https://images.unsplash.com/photo-1522071820081-009f0129c71c"
-                        alt="students"
+                            class="h-28 w-full object-cover rounded-md"
+                            src="https://images.unsplash.com/photo-1522071820081-009f0129c71c"
+                            alt="students"
                     />
                     <div>
                         <h3 class="font-semibold text-md text-gray-800 mb-1">Students</h3>
@@ -111,9 +111,9 @@
 
                 <div class="bg-gray-50 border border-gray-200 rounded-lg p-4 flex flex-col gap-3">
                     <img
-                        class="h-28 w-full object-cover rounded-md"
-                        src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238"
-                        alt="faculty"
+                            class="h-28 w-full object-cover rounded-md"
+                            src="https://images.unsplash.com/photo-1596495577886-d920f1fb7238"
+                            alt="faculty"
                     />
                     <div>
                         <h3 class="font-semibold text-md text-gray-800 mb-1">Faculty & Organizers</h3>
