--- a/templates/createOrganization.html
+++ b/templates/createOrganization.html
@@ -13,7 +13,7 @@
 
         <!-- error messages -->
         <div id="error-messages" class="transition-all duration-300 flex items-center mx-auto max-w-lg w-full mb-3">
-            {% include "partials/errorMessages.html" %}
+            {% include "partials/flash_messages.html" %}
         </div>
 
         <div class="flex items-center mx-auto max-w-lg">
