--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,6 +52,11 @@
 
     <!-- main content -->
     <main class="flex-grow self-center mt-10 mb-12 px-5 w-full max-w-4xl space-y-6">
+        <!-- flash messages -->
+        <div id="flash-messages" class="transition-all duration-300">
+            {% include "partials/flash_messages.html" %}
+        </div>
+
         <!-- header -->
         <div class="flex flex-wrap justify-between items-center gap-3">
             <h2 class="font-bold text-2xl">Profile</h2>
