--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 
             <!-- error messages -->
             <div id="error-messages" class="transition-all duration-300">
-                {% include "partials/errorMessages.html" %}
+                {% include "partials/flash_messages.html" %}
             </div>
 
             <!-- registration form -->
