--- a/templates/opportunityDetails.html
+++ b/templates/opportunityDetails.html
@@ -5,7 +5,12 @@
     {% include "partials/navbar.html" %}
 
     <!-- main content -->
-    <main class="flex-grow mt-10 mb-20 px-5 w-full max-w-4xl lg:max-w-6xl mx-auto">
+    <main class="flex-grow mt-5 mb-20 px-5 w-full max-w-4xl lg:max-w-6xl mx-auto">
+        <!-- flash messages -->
+        <div id="flash-messages" class="transition-all duration-300 mb-5">
+            {% include "partials/flash_messages.html" %}
+        </div>
+
         {% if opp_details %}
             <div class="bg-white rounded-2xl shadow-lg p-5 md:p-10 flex flex-col gap-10">
                 <!-- image -->
@@ -52,13 +57,29 @@
                     </div>
 
                     <!-- signup button -->
-                    <form action="/signup" method="post" class="pt-4">
-                        <button
-                                type="submit"
-                                class="w-full md:w-auto bg-utdOrange text-white text-lg font-semibold px-6 py-3 rounded-xl hover:bg-orange-500 hover:cursor-pointer transition shadow-md"
-                        >
-                            Sign Up
-                        </button>
+                    <form
+                            hx-post="{{ url_for("signup", opp_id=opp_details.opp_id) }}"
+                            hx-target="#signup-btn-wrapper"
+                            hx-swap="outerHTML"
+                            class="pt-4"
+                    >
+                        <div id="signup-btn-wrapper">
+                            <button
+                                    id="signup-btn"
+                                    type="submit"
+                                    class="w-full md:w-auto flex gap-2 inline-flex items-center justify-center bg-utdOrange text-white text-lg font-semibold px-6 py-3 rounded-xl hover:cursor-pointer hover:bg-orange-500 transition shadow-md"
+                                    hx-disable="true"
+                            >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                     class="lucide lucide-pen-line">
+                                    <path d="M13 21h8"/>
+                                    <path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/>
+                                </svg>
+                                <span>Sign Up</span>
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
