--- a/templates/partials/profile_signups.html
+++ b/templates/partials/profile_signups.html
@@ -1,7 +1,7 @@
 <div class="space-y-4">
     {% if signups %}
         {% for signup in signups %}
-            <div class="flex items-center justify-between p-4 bg-white shadow-md border-1 border-gray-300 rounded-lg group">
+            <div class="signup-card flex items-center justify-between p-4 bg-white shadow-md border-1 border-gray-300 rounded-lg group">
                 <div id="{{ signup.signup_id }}" class="overflow-hidden">
                     <a href="{{ url_for("opportunity_details", opp_id=signup.opp_id) }}">
                         <h3 class="font-semibold text-gray-800 text-sm md:text-lg truncate hover:underline hover:text-gray-900 transition-colors">{{ signup.title }}</h3>
@@ -12,8 +12,12 @@
                     </p>
                 </div>
 
-                <button type="button"
-                        hx-post="{{ url_for('signup_delete', signup_id=signup.signup_id) }}" hx-trigger="click consume"
+                <button
+                        type="button"
+                        hx-post="{{ url_for('signup_delete', signup_id=signup.signup_id) }}"
+                        hx-trigger="click"
+                        hx-target="closest .signup-card"
+                        hx-swap="outerHTML"
                         class="opacity-0 group-hover:opacity-100 hover:cursor-pointer transition text-red-500 hover:text-red-700"
                 >
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
