--- a/templates/organizationManage.html
+++ b/templates/organizationManage.html
@@ -92,7 +92,7 @@
                     <!-- update and delete buttons -->
                     <div class="flex gap-3">
                         <a href="{{ url_for('organization_update', org_id=org_details.org_id) }}"
-                           class="group inline-flex items-center p-2 bg-yellow-200 text-yellow-600 rounded-md overflow-hidden transition-all">
+                           class="group inline-flex items-center p-2 bg-yellow-200 text-yellow-600 rounded-md overflow-hidden transition-all duration-300">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                  stroke-linejoin="round" class="lucide lucide-pencil-icon lucide-pencil">
@@ -100,14 +100,14 @@
                                 <path d="m15 5 4 4"/>
                             </svg>
 
-                            <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all whitespace-nowrap text-sm font-medium">
+                            <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all duration-300 whitespace-nowrap text-sm font-medium">
                                 Edit
                             </span>
                         </a>
 
                         <button hx-get="{{ url_for('organization_delete_confirmation', org_id=org_details.org_id) }}"
                                 hx-target="#modal-container" hx-swap="innerHTML"
-                                class="group inline-flex items-center p-2 bg-red-200 text-red-600 rounded-md overflow-hidden transition-all hover:cursor-pointer">
+                                class="group inline-flex items-center p-2 bg-red-200 text-red-600 rounded-md overflow-hidden transition-all duration-300 hover:cursor-pointer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                  stroke-linejoin="round" class="lucide lucide-trash2-icon lucide-trash-2 flex-shrink-0">
@@ -118,7 +118,7 @@
                                 <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
                             </svg>
 
-                            <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all whitespace-nowrap text-sm font-medium">
+                            <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all duration-300 whitespace-nowrap text-sm font-medium">
                                 Delete
                             </span>
                         </button>
