--- a/templates/partials/org_manage_opportunities.html
+++ b/templates/partials/org_manage_opportunities.html
@@ -38,6 +38,56 @@
                         <div class="max-w-2/5">
                             <p class="bg-orange-200 px-3 py-2 rounded-2xl text-gray-800 text-xs truncate text-center">{{ opp.category.replace("_", " ").title() }}</p>
                         </div>
+
+                        <!--cound and update and delete buttons -->
+                        <div class="ml-2 flex gap-3">
+                            <div class="group inline-flex items-center p-2 bg-green-200 rounded-md text-sm text-center text-green-800 overflow-hidden transition-all duration-300">
+                                <p class="font-medium">{{ opp.total_signups }}</p>
+
+                                <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all whitespace-nowrap text-sm font-medium duration-300">
+                                    {% if opp.total_signups == opp.max_signups %}
+                                        Full
+                                    {% elif opp.total_signups == 1 %}
+                                        Signup
+                                    {% else %}
+                                        Signups
+                                    {% endif %}
+                                </span>
+                            </div>
+
+                            <a href="{{ url_for('opportunity_update', opp_id=opp.opp_id) }}"
+                               class="group inline-flex items-center p-2 bg-yellow-200 text-yellow-600 rounded-md overflow-hidden transition-all duration-300">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round" class="lucide lucide-pencil-icon lucide-pencil">
+                                    <path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/>
+                                    <path d="m15 5 4 4"/>
+                                </svg>
+
+                                <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all duration-300 whitespace-nowrap text-sm font-medium">
+                                Edit
+                            </span>
+                            </a>
+
+                            <button hx-get="{{ url_for('opportunity_delete_confirmation', opp_id=opp.opp_id) }}"
+                                    hx-target="#modal-container" hx-swap="innerHTML"
+                                    class="group inline-flex items-center p-2 bg-red-200 text-red-600 rounded-md overflow-hidden transition-all duration-300 hover:cursor-pointer">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round"
+                                     class="lucide lucide-trash2-icon lucide-trash-2 flex-shrink-0">
+                                    <path d="M10 11v6"/>
+                                    <path d="M14 11v6"/>
+                                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"/>
+                                    <path d="M3 6h18"/>
+                                    <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+                                </svg>
+
+                                <span class="max-w-0 opacity-0 group-hover:max-w-xs group-hover:opacity-100 group-hover:ml-2 transition-all duration-300 whitespace-nowrap text-sm font-medium">
+                                Delete
+                            </span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
