added update functionality for opportunities

--- a/templates/partials/org_manage_opportunities.html
+++ b/templates/partials/org_manage_opportunities.html
@@ -39,7 +39,7 @@
                             <p class="bg-orange-200 px-3 py-2 rounded-2xl text-gray-800 text-xs truncate text-center">{{ opp.category.replace("_", " ").title() }}</p>
                         </div>
 
-                        <!--cound and update and delete buttons -->
+                        <!-- count and update and delete buttons -->
                         <div class="ml-2 flex gap-3">
                             <div class="group inline-flex items-center p-2 bg-green-200 rounded-md text-sm text-center text-green-800 overflow-hidden transition-all duration-300">
                                 <p class="font-medium">{{ opp.total_signups }}</p>
