--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <script>
+        document.body.addEventListener("htmx:afterSwap", (event) => {
+            if (event.detail.target.id === "error-messages") {
+                document.getElementById("error-messages")
+                    .scrollIntoView({behavior: "smooth", block: "center"});
+            }
+        });
+    </script>
+
     <div
             class="flex justify-center items-center bg-gradient-to-br from-orange-200 to-orange-400 min-h-screen"
     >
         <!-- login card -->
         <div class="space-y-6 bg-white shadow-lg px-5 sm:px-10 py-8 rounded-xl sm:w-full max-w-md">
+            <!-- back button -->
+            <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
+                <button onclick="handleBack()" class="inline-flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                         class="lucide lucide-move-left-icon lucide-move-left">
+                        <path d="M6 8L2 12L6 16"/>
+                        <path d="M2 12H22"/>
+                    </svg>
+
+                    <span>Back</span>
+                </button>
+            </div>
             <div class="text-center">
                 <h1 class="font-bold text-3xl">Welcome Back</h1>
                 <p class="mt-2 text-gray-500">Login to your UTDLink account</p>
