--- a/templates/opportunity/opportunity_update.html
+++ b/templates/opportunity/opportunity_update.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <script>
+        document.body.addEventListener("htmx:afterSwap", (event) => {
+            if (event.detail.target.id === "error-messages") {
+                document.getElementById("error-messages")
+                    .scrollIntoView({behavior: "smooth", block: "center"});
+            }
+        });
+    </script>
+
     <!-- navbar -->
     {% include "partials/navbar.html" %}
 
@@ -9,6 +18,20 @@
         <!-- Quill -->
         <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet"/>
         <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+
+        <!-- back button -->
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
+            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="lucide lucide-move-left-icon lucide-move-left">
+                    <path d="M6 8L2 12L6 16"/>
+                    <path d="M2 12H22"/>
+                </svg>
+
+                <span>Back</span>
+            </button>
+        </div>
 
         <!-- header -->
         <div class="flex flex-wrap justify-between items-center gap-3 mb-6">
@@ -164,6 +187,4 @@
             </form>
         </div>
     </main>
-
-    {% include "partials/footer.html" %}
 {% endblock content %}
