--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,7 @@
             <a href="{{ url_for("about") }}" class="hover:text-utdOrange transition-colors">
                 About
             </a>
-            <a href="mailto:vjm230001@utdallas.edu" class="hover:text-utdOrange transition-colors">
+            <a href="mailto:utd-link@utdallas.edu" class="hover:text-utdOrange transition-colors">
                 Contact
             </a>
             <a href="{{ url_for("privacy") }}" class="hover:text-utdOrange transition-colors">
