--- a/templates/partials/profile_orgs.html
+++ b/templates/partials/profile_orgs.html
@@ -16,7 +16,7 @@
     <div class="gap-6 grid sm:grid-cols-2 lg:grid-cols-3 mt-2">
     {% for org in organizations %}
         <div class="bg-white shadow-md hover:shadow-lg border border-gray-100 rounded-xl overflow-hidden transition duration-300">
-            <img src="{{ org.org_image_url }}" alt="{{ org.org_name }}" class="w-full aspect-3/2 object-cover">
+            <img src="{{ org.org_image_url }}" alt="{{ org.org_name }}" class="w-full object-cover aspect-video">
 
             <div class="p-4 space-y-2">
                 <h3 class="font-semibold text-gray-800 text-lg truncate">{{ org.org_name }}</h3>
