--- a/templates/opportunity/opportunity_details.html
+++ b/templates/opportunity/opportunity_details.html
@@ -11,6 +11,20 @@
             {% include "partials/flash_messages.html" %}
         </div>
 
+        <!-- back button -->
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
+            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="lucide lucide-move-left-icon lucide-move-left">
+                    <path d="M6 8L2 12L6 16"/>
+                    <path d="M2 12H22"/>
+                </svg>
+
+                <span>Back</span>
+            </button>
+        </div>
+
         {% if opp_details %}
             <div class="bg-white rounded-2xl shadow-lg p-5 md:p-10 flex flex-col gap-10">
                 <!-- image -->
@@ -87,7 +101,4 @@
             <h3 class="font-lg text-gray-700 mt-10">This opportunity does not exist</h3>
         {% endif %}
     </main>
-
-    <!-- footer -->
-    {% include "partials/footer.html" %}
 {% endblock content %}
