--- a/templates/organization/organization_create.html
+++ b/templates/organization/organization_create.html
@@ -1,40 +1,59 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <script>
+        document.body.addEventListener("htmx:afterSwap", (event) => {
+            if (event.detail.target.id === "error-messages") {
+                document.getElementById("error-messages")
+                    .scrollIntoView({behavior: "smooth", block: "center"});
+            }
+        });
+    </script>
+
+    <!-- navbar -->
     {% include "partials/navbar.html" %}
 
+    <!-- main content -->
     <main class="flex-grow self-center mt-10 mb-12 px-5 w-full max-w-6xl">
-        <div class="flex flex-wrap justify-between items-center gap-3 mb-6">
-            <h2 class="font-bold text-2xl">Edit Organization</h2>
+        <!-- back button -->
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
+            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="lucide lucide-move-left-icon lucide-move-left">
+                    <path d="M6 8L2 12L6 16"/>
+                    <path d="M2 12H22"/>
+                </svg>
+
+                <span>Back</span>
+            </button>
         </div>
 
-        <div id="error-messages"
-             class="transition-all duration-300 flex items-center mx-auto max-w-lg w-full mb-3">
+        <!-- header -->
+        <div class="flex flex-wrap justify-between items-center gap-3 mb-6">
+            <h2 class="font-bold text-2xl">Create New Organization</h2>
+        </div>
+
+        <!-- error messages -->
+        <div id="error-messages" class="transition-all duration-300 flex items-center mx-auto max-w-lg w-full mb-3">
             {% include "partials/flash_messages.html" %}
         </div>
 
         <div class="flex items-center mx-auto max-w-lg">
-            <form hx-post="{{ url_for('organization_update', org_id=org.org_id) }}"
-                  hx-target="#error-messages"
-                  hx-swap="innerHTML"
-                  hx-disabled-elt="#submit-button"
-                  hx-encoding="multipart/form-data"
-                  method="post"
+            <!-- create opportunity form -->
+            <form hx-post="{{ url_for("organization_create") }}" hx-target="#error-messages" hx-swap="innerHTML"
+                  hx-disabled-elt="#submit-button" method="post" hx-encoding="multipart/form-data"
                   class="group flex flex-col w-full">
-
-                <!-- Name -->
                 <label for="name" class="font-semibold text-lg">Name</label>
                 <input
                         type="text"
                         id="name"
                         name="name"
                         required
-                        value="{{ org.org_name }}"
                         placeholder="Enter the organization name"
                         class="bg-gray-50 shadow shadow-gray-100 mt-1 p-3 border border-gray-300 focus:border-utdOrange rounded-md outline-none focus:ring-2 focus:ring-utdOrange/50 transition-colors duration-300"
                 />
 
-                <!-- Type -->
                 <label for="org_type" class="mt-4 font-semibold text-lg">Organization Type</label>
                 <select
                         id="org_type"
@@ -42,27 +61,31 @@
                         required
                         class="block w-full mt-1 p-3 bg-gray-100 border border-gray-200 text-heading text-sm rounded-md outline-none focus:border-utdOrange focus:ring-2 focus:ring-utdOrange/50 transition-colors duration-300 shadow-xs"
                 >
-                    <option value="" disabled>Choose a type</option>
-                    {% for type in [
-                        'academic','administrative','advocacy','arts','business', 'career',
-                        'community-service','cultural','entrepreneurship','environmental','esports',
-                        'health-wellness','international','media','professional','recreational',
-                        'research','social','sustainability','technical'
-                    ] %}
-                        <option value="{{ type }}"
-                                {% if org.org_type == type %}selected{% endif %}>
-                            {{ type | capitalize }}
-                        </option>
-                    {% endfor %}
+                    <option value="" selected>Choose a type</option>
+                    <option value="academic">Academic</option>
+                    <option value="administrative">Administrative</option>
+                    <option value="advocacy">Advocacy</option>
+                    <option value="arts">Arts</option>
+                    <option value="business">Business</option>
+                    <option value="career">Career</option>
+                    <option value="community-service">Community-Service</option>
+                    <option value="cultural">Cultural</option>
+                    <option value="entrepreneurship">Entrepreneurship</option>
+                    <option value="environmental">Environmental</option>
+                    <option value="esports">Esports</option>
+                    <option value="health-wellness">Health-Wellness</option>
+                    <option value="international">International</option>
+                    <option value="media">Media</option>
+                    <option value="professional">Professional</option>
+                    <option value="recreational">Recreational</option>
+                    <option value="research">Research</option>
+                    <option value="social">Social</option>
+                    <option value="sports">Sports</option>
+                    <option value="sustainability">Sustainability</option>
+                    <option value="technical">Technical</option>
                 </select>
 
-                <!-- Image -->
-                <label for="org_image" class="mt-4 font-semibold text-lg">Update Organization Image</label>
-                <div class="bg-gray-50 shadow-md p-2 my-4 w-40 flex flex-col rounded-md">
-                    <img src="{{ org.org_image_url }}" alt="{{ org.org_name }}"
-                         class="w-32 object-contain self-center rounded-md"/>
-                    <p class="text-sm text-gray-600 text-center mt-2">Current Image</p>
-                </div>
+                <label for="org_image" class="mt-4 font-semibold text-lg">Upload Organization Image</label>
                 <input
                         type="file"
                         id="org_image"
@@ -71,13 +94,12 @@
                         class="bg-gray-50 hover:file:bg-orange-400 file:bg-orange-300 shadow shadow-gray-100 file:mr-5 file:px-4 file:py-2 border border-gray-300 file:border-0 rounded-lg file:rounded-md outline-none file:font-semibold text-gray-500 file:text-black text-sm file:text-sm"
                 />
 
-                <!-- Email -->
                 <label for="org_email" class="mt-4 font-semibold text-lg">Organization Email</label>
                 <input
                         type="email"
                         id="org_email"
                         name="org_email"
-                        value="{{ org.org_email }}"
+                        placeholder="myorg@utd.edu"
                         required
                         class="bg-gray-50 shadow shadow-gray-100 mt-1 p-3 border border-gray-300 focus:border-utdOrange rounded-md outline-none focus:ring-2 focus:ring-utdOrange/50 transition-colors duration-300"
                 />
@@ -91,11 +113,10 @@
                          stroke-linecap="round" stroke-linejoin="round">
                         <path d="M21 12a9 9 0 1 1-6.219-8.56"></path>
                     </svg>
-                    <span class="group-[.htmx-request]:hidden">Save Changes</span>
+
+                    <span class="group-[.htmx-request]:hidden">Submit</span>
                 </button>
             </form>
         </div>
     </main>
-
-    {% include "partials/footer.html" %}
 {% endblock content %}
