--- a/templates/organization/organization_manage.html
+++ b/templates/organization/organization_manage.html
@@ -44,6 +44,25 @@
 
     <!-- main content -->
     <main class="flex-grow mt-10 mb-20 px-5 w-full max-w-3xl lg:max-w-5xl mx-auto space-y-5">
+        <!-- flash messages -->
+        <div id="flash-messages" class="transition-all duration-300 flex items-center mx-auto max-w-lg w-full mb-3">
+            {% include "partials/flash_messages.html" %}
+        </div>
+
+        <!-- back button -->
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
+            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                     class="lucide lucide-move-left-icon lucide-move-left">
+                    <path d="M6 8L2 12L6 16"/>
+                    <path d="M2 12H22"/>
+                </svg>
+
+                <span>Back</span>
+            </button>
+        </div>
+
         {% if org_details %}
             <div class="bg-white rounded-2xl shadow-lg p-5 md:p-10 flex flex-col md:flex-row gap-10">
                 <!-- image -->
@@ -186,7 +205,4 @@
             <h3 class="font-lg text-gray-700 mt-10">This organization does not exist</h3>
         {% endif %}
     </main>
-
-    <!-- footer -->
-    {% include "partials/footer.html" %}
 {% endblock content %}
